怒涛のテンプレート修正作業

--- a/templates/earthquake_activity.tmpl
+++ b/templates/earthquake_activity.tmpl
@@ -1,3 +1,4 @@
-{{.TempFormatHeadlineText}}
+{{- /* 地震の活動状況等に関する情報のテンプレート */ -}}
+{{- convert .Parsed.Head.Headline.Text false}}
 
-{{.TempFormatBodyText}}
+{{ convert .Parsed.Body.Text false -}}
